test/sema/typeck/pattern/in-if-with-condition-unknown-in-else.dora
enum Foo { A(Int64), B }
fn f(x: Foo): Int64 {
    if x is Foo::A(y) && y > 0 {
        0
    } else {
        y
    }
}
